ags (4.0.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed rename machine dialog and machine selector popover
	* fixed rename machine audio dialog
	* fixed reposition machine audio dialog

ags (4.0.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsCompositeEditor machine radio button XML IO in ags_simple_file.c
	* fixed ags_window_file_timeout() to set title with markup

ags (4.0.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsWindow missing close-request callback
	* fixed meta-data window hide on close
	* fixed removing AgsSoundcardEditor
	* fixed AgsHybridSynth callbacks to use GtkCheckButton
	* fixed AgsHybridFMSynth callbacks to use GtkCheckButton
	* fixed ags_lfo_synth_util.c OS X accelerated code
	* fixed AgsCoreAudioPort CoreAudio callbacks to use app_buffer_mode

ags (4.0.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added -Werror=return-type C preprocessor flags

ags (4.0.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed .gir include version identifier of Soup-3.0

ags (4.0.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed *.pc.in files version identifier

ags (4.0.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gtk-doc libgsequencer

ags (4.0.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gtk-doc

ags (4.0.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* major API improvements
	* modified GType from gulong to gpointer in marshallers
	* migrated libgsequencer.so to Gtk-4
	* migrated libags_gui.so to Gtk-4
	* migrated libags_server.so to libsoup-3.0
	* migrated libags_audio.so to libsoup-3.0
	* implemented AgsCartesian properties
	* implemented ags_common_pitch_util.[ch]
	* implemented AgsMachineEditorDialog made it more modular
	* implemented AgsConnectionEditorDialog made it more modular
	* refactored libgsequencer.so to use AgsConnectableFlags